--- a/AngularJS/byNVT/css/style.css
+++ b/AngularJS/byNVT/css/style.css
@@ -25,6 +25,8 @@ body {
     justify-content: center;
 }
 #btn1 {
+    width: 100%;
+    text-align: right;
     border: none;
     background-color: #ccc;
     margin: 4px;
