--- a/AngularJS/byNVT/css/style.css
+++ b/AngularJS/byNVT/css/style.css
@@ -25,11 +25,11 @@ body {
     justify-content: center;
 }
 #btn1 {
-    width: 100%;
     text-align: right;
     border: none;
     background-color: #ccc;
-    margin: 4px;
+    margin-right: 4px;
+    margin-left: 80%;
     text-decoration: underline;
     color: blue;
 }
