--- a/AngularJS/byNVT/css/style.css
+++ b/AngularJS/byNVT/css/style.css
@@ -5,9 +5,10 @@
 }
 html {
     height: 100%;
+    
 }
 body {
-    background-image:url("/AngularJS/byNVT/image/background.png");
+   /* background-image:url("/AngularJS/byNVT/image/background.png");*/
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -16,31 +17,40 @@ body {
     height: 100%;
     width: 100%;
 }
+button{
+    width:  178% ;
+    height: 0px ;
+}
+
 .container {
-    background-color: #ccc;
-    width: 40%;
-    height: 100%;
+    background-color: #f2f2f2;
+    width: 50%;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: 0 0 0 10px  rgba(0, 0, 0, 3);
+    border-radius: 10px;
 }
 #btn1 {
     border: none;
-    background-color: #ccc;
+    background-color: #f3f3f3;
     margin: 4px;
     text-decoration: underline;
-    color: blue;
+    color: rgb(0, 0, 255);
 }
 .inp {
     width: 300px;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
     border-radius: 4px;
     padding: 2px;
     margin: 5px;
 }
 #btn2 {
-    border: 1px solid aquamarine;
-    background-color: aquamarine;
+    border: 1px solid rgb(252, 252, 252);
+    background-color: rgb(156, 164, 255);
     border-radius: 4px;
 }
 #tbl,
@@ -48,7 +58,7 @@ body {
 #tbl tbody,
 #tbl thead th,
 #tbl tbody tr td {
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
     border-collapse: collapse;
     text-align: center;
 }
