--- a/project/style.css
+++ b/project/style.css
@@ -6,13 +6,16 @@
 body
 {
     position: initial;
-    background-color: rgb(179, 149, 2);
+    background-color: rgb(113, 99, 26);
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
     font-family: sans-serif;
     z-index: 2;
 }
+
+
+
 .menu-bar
 {
     background-image: url(image/menu\ background.webp);
@@ -83,6 +86,16 @@ body
 {
     color: #f2f2f2;
 }
+
+
+li:hover{
+    position: relative;
+    transform: scale(1.2);
+    z-index:20 ;
+
+}
+
+
 #img-deg-1
 {
     float: right;
