--- a/projectss/style1.css
+++ b/projectss/style1.css
@@ -23,7 +23,7 @@ body
 }
 .menu-bar
 {
-    background-image: url(image/menu\ background.webp);
+    background: rgb(85, 139, 85);
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
@@ -128,9 +128,16 @@ html {
 }
 #section-1 {
     height: 900px;
-    background: green;
+    background: rgb(219, 217, 217);
     display: inline-block;
     width: 100%;
+}
+#section-5 {
+   height: 700px;
+   background: rgb(85, 139, 85);
+   display: inline-block;
+   width: 100%;
+   text-align: center;
 }
 #section-2 {
     height: 800px;
@@ -141,9 +148,10 @@ html {
     padding-top: 2%;
 }
 
+
 #section-3 {
-    height: 900px;
-    background: green;
+    height: 850px;
+    background: rgb(85, 139, 85);
     display: inline-block;
     width: 100%;
     text-align: center;
@@ -154,7 +162,7 @@ html {
     display: inline-block;
     width: 100%;
 }
-.container {
+.container-2 {
     width: 100%;
     height: 40%;
     padding: 5%;
@@ -204,13 +212,13 @@ html {
 
 
 
-.container-2{
+.container{
    max-width: 900px;
    margin:0 auto;
    padding:3rem 2rem;
 }
 
-.container-2 .title{
+.container .title{
    font-size: 40px;
    color:#444;
    margin-bottom: 50px;
@@ -218,13 +226,13 @@ html {
    text-align: center;
 }
 
-.container-2 .products-container{
+.container .products-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
    gap:2rem;
 }
 
-.container-2 .products-container .product{
+.container .products-container .product{
    text-align: center;
    padding:3rem 2rem;
    background: #fff;
@@ -234,30 +242,30 @@ html {
    cursor: pointer;
 }
 
-.container-2 .products-container .product:hover{
+.container .products-container .product:hover{
    outline: .2rem solid #222;
    outline-offset: 0;
 }
 
-.container-2 .products-container .product img{
+.container .products-container .product img{
    height: 100px;
 }
 
-.container-2 .products-container .product:hover img{
+.container .products-container .product:hover img{
    transform: scale(.9);
 }
 
-.container-2 .products-container .product h3{
+.container .products-container .product h3{
    padding:.5rem 0;
-   font-size: 10px;
+   font-size: 15px;
    color:#444;
 }
 
-.container-2 .products-container .product:hover h3{
+.container .products-container .product:hover h3{
    color:#27ae60;
 }
 
-.container-2 .products-container .product .price{
+.container .products-container .product .price{
    font-size: 2rem;
    color:#444;
 }
@@ -275,12 +283,13 @@ html {
 
 .products-preview .preview{
    display: none;
-   padding:2rem;
+   padding:1rem;
    text-align: center;
    background: #fff;
    position: relative;
-   margin:2rem;
-   width: 40rem;
+   margin:10rem;
+   width: 20rem;
+   
 }
 
 .products-preview .preview.active{
@@ -288,7 +297,7 @@ html {
 }
 
 .products-preview .preview img{
-   height: 30rem;
+   height: 5rem;
 }
 
 .products-preview .preview .fa-times{
@@ -296,7 +305,7 @@ html {
    top:1rem; right:1.5rem;
    cursor: pointer;
    color:#444;
-   font-size: 4rem;
+   font-size: 2rem;
 }
 
 .products-preview .preview .fa-times:hover{
@@ -306,12 +315,12 @@ html {
 .products-preview .preview h3{
    color:#444;
    padding:.5rem 0;
-   font-size: 2.5rem;
+   font-size: 1rem;
 }
 
 .products-preview .preview .stars{
    padding:1rem 0;
-   font-size: 1.7rem;
+   font-size: 0.9rem;
 }
 
 .products-preview .preview .stars i{
@@ -325,13 +334,13 @@ html {
 .products-preview .preview p{
    line-height: 1.5;
    padding:1rem 0;
-   font-size: 1.6rem;
+   font-size: 1rem;
    color:#777;
 }
 
 .products-preview .preview .price{
    padding:1rem 0;
-   font-size: 2.5rem;
+   font-size: 1rem;
    color:#27ae60;
 }
 
@@ -345,7 +354,7 @@ html {
 .products-preview .preview .buttons a{
    flex:1 1 16rem;
    padding:1rem;
-   font-size: 1.8rem;
+   font-size: 1rem;
    color:#444;
    border:.1rem solid #444;
 }
